# MemoClient

./: CMakeLists.txt  main.cpp
Essentials/: ClientDataBase.cpp  ClientDataBase.h  Schedule.cpp  Schedule.h  Timer.cpp
Net/: ClientNetUtils.cpp  exceptions.h
Utils/: Terminal.cpp  Utils.cpp  Utils.h
